# Sistema_Edu

./: README.md  db.sqlite3  db_sqlite3  pyproject.toml
Sistema_Edu/: pyproject.toml
Sistema_Edu/setup/: settings.py
Sistema_Edu/todos/: models.py  views.py
Sistema_Edu/todos/migrations/: 0001_initial.py  0002_rename_deadlie_todo_deadline.py  0003_alter_todo_created_at_alter_todo_deadline_and_more.py  0004_alter_todo_created_at.py  0005_alter_todo_title.py
Sistema_Edu/todos/templates/todos/: todo_list.html
estoque/: views.py
estoque/templates/estoque/: home.html
pedidos/: models.py  views.py
pedidos/migrations/: 0001_initial.py
pedidos/templates/pedidos/: pedidos_form.html  pedidos_list.html  pedidos_lista.html
setup/: settings.py  urls.py
setup/setup/: settings.py
todos/: models.py  views.py
todos/migrations/: 0001_initial.py  0002_rename_deadlie_todo_deadline.py  0003_alter_todo_created_at_alter_todo_deadline_and_more.py  0004_alter_todo_created_at.py  0005_alter_todo_title.py  0006_rename_todo_pedidos.py  0007_alter_pedidos_finished_at.py  0008_pedidos_obser.py  0009_rename_obser_pedidos_obser.py
todos/templates/todos/: todo_list.html  todos_lista.html
